k8s/local/anvil-ethereum-node/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: anvil-ethereum-node
  name: anvil-ethereum-node
  namespace: chicmoz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anvil-ethereum-node
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: anvil-ethereum-node
    spec:
      containers:
        - image: aztecprotocol/foundry
          name: anvil-ethereum-node
          resources:
            requests:
              memory: 300Mi
              cpu: 100m
            limits:
              memory: 300Mi
              cpu: 250m
          command:
            - /opt/foundry/bin/anvil
          args:
            - -p
            - "8545"
            - --host
            - "0.0.0.0"
            - --chain-id
            - "31337"
          ports:
            - name: anvil-port
              containerPort: 8545
              protocol: TCP
